--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,9 @@
 	<properties>
 		<maven.compiler.source>11</maven.compiler.source>
 		<maven.compiler.target>11</maven.compiler.target>
-		<sonar.host.url>http://13.204.92.229:9000</sonar.host.url>
+		<sonar.host.url>http://https://52.90.124.8:9000</sonar.host.url>
+		<sonar.token>sqa_0f1c656b4cbd627686c50894903a65e69e5f0972</sonar.token>
+
 	</properties>
 	<dependencies>
 		<dependency>
